2009-04-16  Alan Modra  <amodra@bigpond.net.au>

	* ld-libs/lib-1.s: Use "==" instead of ".set".
	* ld-libs/lib-2.s: Likewise.
	* ld-scripts/defined.s: Likewise.

2009-04-15  Christophe Lyon  <christophe.lyon@st.com>

	* ld-arm/arm-elf.exp: Add 1 more test to check undef weak
	reference with PLT in ARM mode.
	* ld-arm/thumb2-bl-undefweak1.d, ld-arm/thumb2-bl-undefweak1.s:
	New files.

2009-04-08  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-i386/abs.d: Add  --32 for assembler and -melf_i386 for
	linker.

2009-04-03  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-scripts/rgn-at.s: Use explicit .section pseudos.

2009-04-03  Dave Korn  <dave.korn.cygwin@gmail.com>

	* ld-pe/image_size.d (#target):  Also run test on Cygwin and x86_64
	MinGW targets.

2009-04-03  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-scripts/rgn-at.exp: New.
	* ld-scripts/rgn-at.s: New.
	* ld-scripts/rgn-at1.d: New.
	* ld-scripts/rgn-at1.t: New.
	* ld-scripts/rgn-at2.d: New.
	* ld-scripts/rgn-at2.t: New.
	* ld-scripts/rgn-at3.d: New.
	* ld-scripts/rgn-at3.t: New.

2009-04-03  Dave Korn  <dave.korn.cygwin@gmail.com>

	* ld-pe/export_dynamic_warning.s:  Make dummy code portable.

2009-04-02  Dave Korn  <dave.korn.cygwin@gmail.com>

	* ld-pe/export_dynamic_warning.d (#warning):  Fix regex pattern.

2009-04-02  Dave Korn  <dave.korn.cygwin@gmail.com>

	PR ld/6744
	* ld-pe/export_dynamic_warning.d:  New test control file.
	* ld-pe/export_dynamic_warning.s:  New test source file.
	* ld-pe/pe.exp:  Also run export_dynamic_warning dump test.

2009-04-02  Christophe Lyon  <christophe.lyon@st.com>

	* ld-arm/farcall-thumb-thumb-pic-veneer.d: Update expected
	results.
	* ld-arm/farcall-thumb-thumb.d: Likewise.

2009-04-02  Nick Clifton  <nickc@redhat.com>

	PR 9987
	* lib/ld-lib.exp (check_gc_sections_available): Do not run garbage
	collection tests for cygwin targets.

2009-04-01  Richard Sandiford  <r.sandiford@uk.ibm.com>

	* ld-powerpc/aix-gc-1.nd: New test.
	* ld-powerpc/aix52.exp: Run it.
